syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "io.yggdrash.proto";

message Block {
    string hash = 1;
    int64 height = 2;
    BlockHeader header = 3;
    repeated Transaction txs = 4;
}

message BlockHeader {
    string version = 1;
    string prev_hash = 2;
    string merkle_hash = 3;
    int64 timestamp = 4;
    //size
}

service BlockService {
    rpc Sync (Block) returns (Block) {
    }
}

// Tx
message Transaction {
    string from = 1;
    string to = 2;
    int64 value = 3;
    google.protobuf.Timestamp timestamp = 4;
}